bugs: squishing

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ a:visited {
 
 a:link {
     padding: 2%;
+    color: #fff;
     font-weight: bold;
     text-decoration: underline;
 }
